--- a/DesignerRHN/DesignerRHN-war/web/EmplSets.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplSets.xhtml
@@ -63,7 +63,7 @@
                         </p:toolbar> 
 
                         <fieldset style="position: absolute; left: 10px; top: 110px; font-size: 10px; width: 830px; height: 285px; border-radius: 10px; ">
-                            <legend style="font-size: 14px; color: blue"><strong>Reformas Laborales</strong></legend>
+                            <legend style="font-size: 14px; color: blue"><strong>Infomacion SET</strong></legend>
                             <!-- TABLA EMPLVIGENCIAREFORMALABORAL -->
 
                             <p:dataTable id="datosSetsEmpleado" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left;"                           
