--- a/DesignerRHN/DesignerRHN-war/web/EmplNovedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplNovedad.xhtml
@@ -94,7 +94,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.concepto.descripcion}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.concepto.descripcion}" readonly="true" id="editarDescripcionConcepto" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase"> 
+                                            <p:inputText onselect="prueba([{name:'n', value:'2'}, {name:'t', value:'#{indice}'}])" value="#{info.concepto.descripcion}" readonly="true" id="editarDescripcionConcepto" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase"> 
                                                 <p:ajax event="change" listener="#{controlEmplNovedad.modificarNovedades(indice)}"/>
                                                 <p:ajax event="select" listener="#{controlEmplNovedad.cambiarIndice(indice, 1)}" />
                                             </p:inputText>
@@ -274,6 +274,8 @@
 
                             </p:dataTable>  
                         </fieldset>  
+                        
+                        <p:remoteCommand name="prueba" actionListener="#{controlEmplNovedad.sencillo()}"/>
 
                         <p:commandButton style="position: absolute; left: 680px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" process="@this" />
                         <p:commandButton style="position: absolute; left: 10px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh"  process="@this" />
