--- a/DesignerRHN/DesignerRHN-war/web/NovedadEmpleado.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NovedadEmpleado.xhtml
@@ -347,8 +347,10 @@
                                         <h:outputText value="Tipo" />
                                     </f:facet>
                                 </p:column>
-
-
+                                
+                                <p:column width="20" style="padding: 0px"> 
+                                    <p:commandButton value="" style="width: 20px; height: 20px;" action="rastro"/>
+                                </p:column>
 
                             </p:dataTable>
                         </fieldset>
